# py-html-checker

./: .gitignore  CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  freezer.py  frozen.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: cli.rst  conf.py  development.rst  index.rst  install.rst  sphinx_reload.py  usage.rst
docs/references/: exceptions.rst  index.rst  logger.rst
html_checker/: __init__.py  exceptions.py  export.py  logger.py  logs.py  report.py  reporter.py  serve.py  sitemap.py  utils.py  validator.py
html_checker/cli/: common.py  console_script.py  entrypoint.py  page.py  site.py  version.py
html_checker/export/: __init__.py  base.py  jinja.py  jinja_filters.py  json.py  logs.py  render.py
html_checker/templates/: audit.html  basic.html  main.css  report.html  skeleton.html  summary.html
html_checker/templates/fragments/: badges.html  counters.html  message.html  report-metas.html
html_checker/utils/: __init__.py  commands.py  documents.py  paths.py  server.py  structures.py  tests.py  texts.py
judas/: __init__.py  exceptions.py  sitemap.py  validator.py
judas/cli/: console_script.py  version.py
tests/: 001_sitemap.py  001_utils.py  010_sitemap.py  010_validator.py  015_reporter.py  020_validator.py  030_export_base.py  030_exporter.py  030_reporter.py  031_export_logs.py  032_export_jinja.py  032_export_render.py  033_export_json.py  034_export_jinja.py  040_serve.py  100_cli_version.py  110_cli_common_options.py  110_cli_version.py  120_cli_page.py  130_cli_site.py  conftest.py
tests/data_fixtures/: sitemap.invalid.json  sitemap.invalid.xml  sitemap.invalidpath.xml  sitemap.json  sitemap.malformed.json  sitemap.malformed.xml  sitemap.missingloc.xml  sitemap.nonamespace.xml  sitemap.xml
tests/data_fixtures/html/: invalid.erroneous-tag.html  valid.basic.html  valid.warning.html
