;;
;; py-html-checker package
;;
[metadata]
name = py-html-checker
version = 0.5.0-pre.2
description = A tool to raise quality issues about HTML pages
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/py-html-checker
license = MIT
keywords = Python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    six
    requests
packages = find:
zip_safe = True

[options.extras_require]
cli =
    click>=7.0,<8.0
    colorama
    colorlog
dev =
    flake8
    pytest
    twine
    tox
jinja =
    MarkupSafe==2.0.1
    Jinja2>=2.10,<3.0
    Pygments>=2.5.2,<2.6.0
serve =
    cherrypy

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    htmlcheck = html_checker.cli.entrypoint:cli_frontend

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py36,py38

[testenv]

commands =
    pip install -e .[cli,dev,jinja]
    pytest -vv tests
