;;
;; py-html-checker package
;;
[metadata]
name = py-html-checker
version = 0.5.0-pre.9
description = Python wrapper around library Nu Html Checker (v.Nu)
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/py-html-checker
project_urls =
    Source Code = https://github.com/sveetch/py-html-checker
    Issue Tracker = https://github.com/sveetch/py-html-checker/issues
    Changelog = https://py-html-checker.readthedocs.io/en/latest/history.html
    Documentation = https://py-html-checker.readthedocs.io/
license = MIT
keywords = Python,HTML,VNU
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
include_package_data = True
install_requires =
    requests
packages = find:
zip_safe = True

[options.extras_require]
cli =
    click>=7.0
    colorlog
jinja =
    Jinja2>=3.0
    Pygments>=2.6.0
serve =
    cherrypy>=18.0.0
dev =
    pytest
quality =
    flake8
    tox
    twine
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    htmlcheck = html_checker.cli.entrypoint:cli_frontend

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,

[tool:pytest]
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,310}

[testenv]

commands =
    pip install -e .[cli,dev,jinja]
    pytest -vv tests
